Add host id to cinder default section
Cinder volumes are associated with the cinder host that created them.
This unique host id can be changed in the conf file. This patch adds
support to allow that.

Change-Id: I9295ed1bfa24bfac8325bd347a92b5e334a31371
Closes-Bug: #1451967

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -139,7 +139,9 @@ api_rate_limit=<%= node["openstack"]["block-storage"]["api"]["ratelimit"] %>
 # scheduler_manager=cinder.scheduler.manager.SchedulerManager
 #### (StrOpt) full class name for the Manager for scheduler
 
-# host=cinder
+<% if node['openstack']['block-storage']['host'] -%>
+host=<%= node['openstack']['block-storage']['host'] %>
+<% end -%>
 #### (StrOpt) Name of this node.  This can be an opaque identifier.  It is
 ####          not necessarily a hostname, FQDN, or IP address.
 
