Make enable v1 and v2 api option configurable
Change-Id: I40efdc8c31dc38f214cc300cc68279af1b614089
Closes-Bug: #1452730

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -53,10 +53,10 @@ log_file = /var/log/cinder/cinder.log
 #### (StrOpt) File name for the paste.deploy config for cinder-api
 
 # DEPRECATED: Deploy v1 of the Cinder API. (boolean value)
-enable_v1_api=false
+enable_v1_api=<%= node["openstack"]["block-storage"]["enable_v1_api"] %>
 
 # Deploy v2 of the Cinder API. (boolean value)
-enable_v2_api=true
+enable_v2_api=<%= node["openstack"]["block-storage"]["enable_v2_api"] %>
 
 # pybasedir=/usr/lib/python/site-packages
 #### (StrOpt) Directory where the cinder python module is installed
