Add rabbitmq max_retries and retry_interval in cinder conf
Oslo.message using rabbit_max_retries and rabbit_retry_interval to
define reconnect rabbitmq server times and interval when can not
connect to rabbitmq server.

Change-Id: I449f7be68dd9c9adbad587a47cf9d9dcc3462369
Closes-bug: #1439968

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -1325,14 +1325,14 @@ rabbit_virtual_host=<%= node["openstack"]["mq"]["block-storage"]["rabbit"]["vhos
 notification_topics=<%= node["openstack"]["mq"]["block-storage"]["rabbit"]["notification_topic"] %>
 #### (ListOpt) AMQP topic used for openstack notifications
 
-# rabbit_retry_interval=1
+rabbit_retry_interval=<%= node["openstack"]["mq"]["block-storage"]["rabbit"]["rabbit_retry_interval"] %>
 #### (IntOpt) how frequently to retry connecting with RabbitMQ
 
 # rabbit_retry_backoff=2
 #### (IntOpt) how long to backoff for between retries when connecting to
 ####          RabbitMQ
 
-# rabbit_max_retries=0
+rabbit_max_retries=<%= node["openstack"]["mq"]["block-storage"]["rabbit"]["rabbit_max_retries"] %>
 #### (IntOpt) maximum retries with trying to connect to RabbitMQ (the
 ####          default of 0 implies an infinite retry count)
 
