Do not put empty default_volume_type into config
Change I1bb94dc1283e50645e4aece600acc52ae17db56b added the config option
default_volume_type with a default value of nil. With this, cinder fails
to create volumes unless a type is explicitly specified. So better only
write this value into the config file if it is set to some non-nil
value.

Change-Id: I7de8c6cc5a424b5b5021675d89a5dba71d72dce0

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -586,8 +586,10 @@ volume_driver=<%= node["openstack"]["block-storage"]["volume"]["driver"] %>
 # volume_force_update_capabilities=false
 #### (BoolOpt) if True will force update capabilities on each check
 
+<% if node["openstack"]["block-storage"]["volume"]["default_volume_type"] %>
 # Default volume type to use (string value)
 default_volume_type=<%= node["openstack"]["block-storage"]["volume"]["default_volume_type"] %>
+<% end %>
 
 ######## defined in cinder.volume.netapp ########
 
