Add database slave connection configure
    - According to the bool attribute
      node['openstack']['endpoints']['db']['enabled_slave'], enable/disable
      nova database slave_connection
    - Add the slave_connection generated from db_uri function

Implements: blueprint sql-slave-connection-support

Change-Id: I9520441952993e8c6b4205e6886778815b5a2e4b

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -1031,6 +1031,9 @@ connection=<%= @sql_connection %>
 # sql_connection_debug=0
 #### (IntOpt) Verbosity of SQL debugging information. 0=None,
 ####          100=Everything
+<% if node['openstack']['endpoints']['db']['enabled_slave'] %>
+slave_connection=<%= @slave_connection %>
+<% end %>
 
 
 [keymgr]
