--- a/templates/default/targets.conf.erb
+++ b/templates/default/targets.conf.erb
@@ -1,9 +1,9 @@
 <%= node["openstack"]["block-storage"]["custom_template_banner"] %>
 
-<% if %w(rhel).include?(node["platform_family"]) %>
-include <%= node['openstack']['block-storage']['conf']['DEFAULT']['volumes_dir'] %>/*
+<% if node['platform_family'].include?('rhel') %>
+include <%= node['openstack']['block-storage']['conf']['DEFAULT']['state_path'] %>/volumes/*
 <% end %>
-<% if %w(debian).include?(node["platform_family"]) %>
+<% if node['platform_family'].include?('debian') %>
 include /etc/tgt/conf.d/*.conf
 <% end %>
 default-driver iscsi
